--- a/joan.html
+++ b/joan.html
@@ -65,24 +65,31 @@
                     <div class="item active"><!-- class of active since it's the first item -->
                         <img src="img/fotos/roma1.jpg" alt="" />
                         <div class="carousel-caption">
-                            <p><a href="http://www.trabhci.eu/">TrabHCI at Rome 2013</a></p>
+                            <p><a href="http://www.trabhci.eu/">TrabHCI at Rome, 2013</a></p>
                         </div>
                     </div>
                     <div class="item">
                         <img src="img/fotos/roma2.jpg" alt="" />
                         <div class="carousel-caption">
-                            <p><a href="http://www.trabhci.eu/">TrabHCI at Rome 2013</a></p>
+                            <p><a href="http://www.trabhci.eu/">TrabHCI at Rome, 2013</a></p>
 
                         </div>
                     </div>
                     <div class="item">
-                        <img src="img/fotos/roma3.jpg" alt="" />
+                        <img src="img/fotos/swerc1.jpg" alt="" />
                         <div class="carousel-caption">
-                            <p><a href="http://www.trabhci.eu/">TrabHCI at Rome 2013</a></p>
+                            <p><a href="http://www.swerc.eu/">SWERC at Valencia, 2013</a></p>
 
                         </div>
                     </div>
 
+                    <div class="item">
+                        <img src="img/fotos/swerc2.jpg" alt="" />
+                        <div class="carousel-caption">
+                            <p><a href="http://www.swerc.eu/">SWERC at Valencia, 2013</a></p>
+
+                        </div>
+                    </div>
                 </div>
             </div><!-- /.carousel-inner -->
             <!--  Next and Previous controls below
@@ -135,16 +142,16 @@
                         <tr><th>Publication</th></tr>
                     </thead>
                     <tbody>
-                    <tr><td>Joan Pastor-Pellicer, Francisco Zamora-Mart&iacute;nez, Salvador Espa&ntilde;a-Boquera and Mar&iacute;a Jos&eacute; Castro-Bleda.
-                            <b>F-Measure as the error function to train Neural Networks</b>,
-                            <i>IWANN</i>, 2013.
-                    </td></tr>
-                    <tr><td>Joan Pastor, Llu&iacute;s-Felip Hurtado, Encarna Segarra, and Emilio Sanchis. <b>Language modelization
-                                and categorization for voice-activated qa.</b> <i>In 16th Iberoamerican Congress on Pattern Recognition</i>, 2011.
-                    </td></tr>
-                    <tr><td>Emilio Sanchis, Llu&iacute;s-Felip Hurtado, Fernando Garc&iacute;a, Joan Pastor, Joaquin Planells, and Encarna Segarra. <b>Sistema de di&aacute;logo multimodal basado en modelos estad&iacute;sticos.</b> <i>In XXVII edici&oacute;n del Congreso Anual de la Sociedad Espa&ntilde;ola para el Procesamiento del Lenguaje Natural (SEPLN)</i>,
-                            2011.</td></tr>
-                </thead>
+                        <tr><td>Joan Pastor-Pellicer, Francisco Zamora-Mart&iacute;nez, Salvador Espa&ntilde;a-Boquera and Mar&iacute;a Jos&eacute; Castro-Bleda.
+                                <b>F-Measure as the error function to train Neural Networks</b>,
+                                <i>IWANN</i>, 2013.
+                        </td></tr>
+                        <tr><td>Joan Pastor, Llu&iacute;s-Felip Hurtado, Encarna Segarra, and Emilio Sanchis. <b>Language modelization
+                                    and categorization for voice-activated qa.</b> <i>In 16th Iberoamerican Congress on Pattern Recognition</i>, 2011.
+                        </td></tr>
+                        <tr><td>Emilio Sanchis, Llu&iacute;s-Felip Hurtado, Fernando Garc&iacute;a, Joan Pastor, Joaquin Planells, and Encarna Segarra. <b>Sistema de di&aacute;logo multimodal basado en modelos estad&iacute;sticos.</b> <i>In XXVII edici&oacute;n del Congreso Anual de la Sociedad Espa&ntilde;ola para el Procesamiento del Lenguaje Natural (SEPLN)</i>,
+                                2011.</td></tr>
+                    </thead>
                 </table>
             </div>
 
