--- a/joan.html
+++ b/joan.html
@@ -181,7 +181,7 @@
 								<td>Emilio Sanchis, Llu&iacute;s-Felip Hurtado, Fernando Garc&iacute;a, Joan Pastor, Joaquin Planells, and Encarna Segarra. <b>Sistema de di&aacute;logo multimodal basado en modelos estad&iacute;sticos.</b><i>In XXVII edici&oacute;n del Congreso Anual de la Sociedad Espa&ntilde;ola para el Procesamiento del Lenguaje Natural (SEPLN)</i>,
 								2011.</td>
 							</tr>
-							</tbody>
+						</tbody>
 					</table>
 				</div>
 				<div class="page-header">
@@ -347,7 +347,6 @@
 						46022, Valencia, Spain
 						<br>
 						<abbr title="Phone">P:</abbr> +34 963877000 <abbr title="Extension">Ext: 73550
-
 					</address>
 
 					<address>
@@ -357,25 +356,43 @@
 						<br>
 						joapaspe __AT__ gmail.com
 					</address>
-					</div>
+				</div>
 			</section>
 			<section id="social">
 				<div class="page-header">
 					<h1>Social</h1>
-					<a href="http://es.linkedin.com/in/joapaspe"> <img src="http://www.linkedin.com/img/webpromo/btn_viewmy_160x33.png" width="160" height="33" border="0" alt="View Joan Pastor Pellicer's profile on LinkedIn"> </a>
-					<br>
-					<!-- Place this code where you want the badge to render. -->
-					<a href="http://plus.google.com/114143608217887742364?prsrc=3"
-					rel="publisher" target="_top" style="text-decoration:none;"> <img src="http://ssl.gstatic.com/images/icons/gplus-32.png" alt="Google+" style="border:0;width:32px;height:32px;"/> </a>
-					<br>
-					<!-- Place this tag where you want the badgev2 to render. -->
-					<g:person href="http//plus.google.com/114143608217887742364" layout="landscape" rel="author"></g:person>
+					<div class="row">
+						<div class="span4">
+							<p>
+							<a href="http://es.linkedin.com/in/joapaspe"> <img src="http://www.linkedin.com/img/webpromo/btn_viewmy_160x33.png" width="160" height="33" border="0" alt="View Joan Pastor Pellicer's profile on LinkedIn"> </a>
+							</p>
+							<p>
+							<!-- Place this code where you want the badge to render. -->
+							<a href="http://plus.google.com/114143608217887742364?prsrc=3"
+							rel="publisher" target="_top" style="text-decoration:none;"> <img src="http://ssl.gstatic.com/images/icons/gplus-32.png" alt="Google+" style="border:0;width:32px;height:32px;"/> </a>
+							</p>
+							<p>
+							<!-- Facebook Badge START --><a href="http://www.facebook.com/joapaspe" target="_TOP" style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; font-variant: normal; font-style: normal; font-weight: normal; color: #3B5998; text-decoration: none;" title="Joan Pastor">Joan Pastor</a><br/><a href="http://www.facebook.com/joapaspe" target="_TOP" title="Joan Pastor"><img src="http://badge.facebook.com/badge/1121859428.3109.531556530.png" style="border: 0px;" /></a><!-- Facebook Badge END -->
+							</p>
+						</div>
+							
+						<div class="span8">
+							<a class="twitter-timeline" href="https://twitter.com/joan_batiste" data-widget-id="351015601390624769">Tweets by @joan_batiste</a>
+							<script>
+								! function(d, s, id) {
+									var js, fjs = d.getElementsByTagName(s)[0], p = /^http:/.test(d.location) ? 'http' : 'https';
+									if (!d.getElementById(id)) {
+										js = d.createElement(s);
+										js.id = id;
+										js.src = p + "://platform.twitter.com/widgets.js";
+										fjs.parentNode.insertBefore(js, fjs);
+									}
+								}(document, "script", "twitter-wjs");
+							</script>
 
-					<!-- Place this render call where appropriate. -->
-					<script type="text/javascript">
-					gapi.person.go();
-					</script>
-				</div>
+						</div>
+					</div>
+
 			</section>
 
 		</div>
@@ -405,18 +422,17 @@
 			$(document).ready(function() {
 				$('.carousel').carousel();
 			})
-			
 			//Santile things
 			//Stile things
 			/*
-			var styles = ["amelia", "cosmos", "flatty", "original", "simplex", "spacelab", "ubuntu"]
-			
+			 var styles = ["amelia", "cosmos", "flatty", "original", "simplex", "spacelab", "ubuntu"]
+
 			 $.each(styles,function(index, value){
-				var mycss = '<link rel="stylesheet" href="css/themes/'+value+'/bootstrap.min.css" type="text/css title="'+value+'" />';
-				$('head').append(mycss); 	
- 			});
- 			*/
-			
+			 var mycss = '<link rel="stylesheet" href="css/themes/'+value+'/bootstrap.min.css" type="text/css title="'+value+'" />';
+			 $('head').append(mycss);
+			 });
+			 */
+
 		</script>
 	</body>
 </html>
