Corrected some bugs

--- a/joan.html
+++ b/joan.html
@@ -23,11 +23,6 @@
 		<script src="js/html5shiv.js"></script>
 		<![endif]-->
 
-		<!-- Fav and touch icons -->
-		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="ico/apple-touch-icon-144-precomposed.png">
-		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="ico/apple-touch-icon-114-precomposed.png">
-		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="ico/apple-touch-icon-72-precomposed.png">
-		<link rel="apple-touch-icon-precomposed" href="ico/apple-touch-icon-57-precomposed.png">
 		<link rel="shortcut icon" href="ico/favicon.png">
 		<!-- Place this tag in your head or just before your close body tag. -->
 		<script type="text/javascript" src="https://apis.google.com/js/plusone.js">
@@ -195,7 +190,7 @@
 							</p>
 						</div>
 						<div class="span3 offset1">
-							<a href="https://github.com/pakozm/april-ann"> <h4>My Projects at Github</h4> <img src="img/jo-github.jpg" class="img-circle" width="128px"> </a>
+							<a href="https://github.com/joapaspe"> <h4>My Projects at Github</h4> <img src="img/jo-github.jpg" class="img-circle" width="128px"> </a>
 							<p>
 								Some personal projects and other stuff at Github.
 							</p>
@@ -298,7 +293,7 @@
 									Check out my Coursera profile at:
 								</p>
 								<p class="text-center">
-									<a href="https://www.coursera.org/user/i/d4a3b9e130284f2ae2980e5c13aacd79"><img src="img/coursera.svg"></a>
+									<a href="https://www.coursera.org/user/i/d4a3b9e130284f2ae2980e5c13aacd79"><img src="img/coursera.png"></a>
 								</p>
 							</div>
 						</div>
