Link courses fixed

--- a/joan.html
+++ b/joan.html
@@ -308,25 +308,29 @@
 
 							<ul>
 								<li>
-									<a href="">Machine Learning</a>, December, 2011.
+									<a href="https://www.coursera.org/course/ml">Machine Learning</a>, December, 2011.
 								</li>
 								<li>
-									<a href="">Introduciton to Artificial Intelligence</a>, December, 2011.
+									<a href="https://www.ai-class.com/">Introduciton to Artificial Intelligence</a>, December, 2011.
 								</li>
 								<li>
-									<a href="">Algorithms: Design and Analysis, Part I</a>, March, 2012.
+									<a href="https://www.coursera.org/course/algo">Algorithms: Design and Analysis, Part I</a>, March, 2012.
 								</li>
 								<li>
-									<a href="">Natural Language Processing</a>, May, 2012.
+									<a href="https://www.coursera.org/course/algo2">Natural Language Processing</a>, May, 2012.
 								</li>
 								<li>
-									<a href="">Web Development</a>, June, 2013.
+									<a href="https://www.udacity.com/course/cs253">Web Development</a>, June, 2012.
 								</li>
 								<li>
-									<a href="">Neural Networks for Machine Learning</a>, December, 2012.
+									<a href="https://www.coursera.org/course/algs4partI">Algorithms, Part I, </a>, August 2012.
 								</li>
 								<li>
-									<a href="">Algorithms, Part I, August</a>, 2012.
+									<a href="https://www.coursera.org/course/neuralnets">Neural Networks for Machine Learning</a>, October, 2012.
+								</li>
+								
+								<li>
+									<a href="https://www.coursera.org/course/algo2">Algorithms: Design and Analysis, Part II</a>, December, 2012.
 								</li>
 							</ul>
 						</div>
