--- a/joan.html
+++ b/joan.html
@@ -26,7 +26,8 @@
 	<body data-spy="scroll" data-target=".navbar">
 		
 		<div id="wrap">
-			<section id="home">		
+			<div class="container">
+			<section id="home">	
 			<div class="navbar navbar-fixed-top">
 				<div class="navbar-inner">
 				<div class="container">
