--- a/joan.html
+++ b/joan.html
@@ -478,8 +478,8 @@
 					$('.carousel').carousel();
 
 					$('.navbar').scrollspy()
-					$('a').smoothScroll();
-
+					//$('a').smoothScroll();
+					$('.navbar a').smoothScroll();
 				})
 
 			</script>
