--- a/joan.html
+++ b/joan.html
@@ -12,7 +12,7 @@
 		<link href="css/font-awesome.min.css" rel="stylesheet">
 		<link href="css/joan.css" rel="stylesheet">
 
-		<link href="css/bootstrap-responsive.css" rel="stylesheet">
+		<link href="css/bootstrap-theme.min.css" rel="stylesheet">
 
 		<!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
 		<!--[if lt IE 9]>
@@ -27,17 +27,18 @@
 		
 			<div class="container">
 			
-			<div class="navbar navbar-fixed-top">
-				<div class="navbar-inner">
-				<div class="container">
-					<button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
+			<div class="navbar navbar-default navbar-fixed-top" role="navigation">
+				<div class="navbar-header">
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
+						<span class="sr-only">Toggle navigation</span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="brand" href="#">Joan Pastor</a>
-					<div class="nav-collapse collapse">
-						<ul class="nav">
+					<a class="navbar-brand" href="#">Joan Pastor</a>
+				</div>
+				<div class="collapse navbar-collapse">
+						<ul class="nav navbar-nav">
 							<li id="nav-home" class="active">
 								<a href="#home">Home</a>
 							</li>
@@ -54,10 +55,10 @@
 								<a href="#social">Social</a>
 							</li>
 						</ul>
+						<div class="pull-right navbar-text">joapaspe_at_gmail.com</div>
 					</div><!--/.nav-collapse -->
-					<div class="pull-right navbar-text">joapaspe_at_gmail.com</div>
+					
 				</div>
-			</div>
 			</div> <!-- navbar -->
 			<section id="home">
 			<div class="container">
