--- a/joan.html
+++ b/joan.html
@@ -23,21 +23,20 @@
 		<link rel="shortcut icon" href="ico/favicon.png">
 	</head>
 
-	<body data-spy="scroll" data-col-md-offset-="100" data-target=".navbar">
+	<body data-spy="scroll" data-offset="125" data-target=".navbar">
 		
 			<div class="container">
 			
 			<div class="navbar navbar-default navbar-fixed-top" role="navigation">
 				<div class="navbar-header">
-					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".nav-collapse">
-						<col-md- class="sr-only">Toggle navigation</col-md->
-						<col-md- class="icon-bar"></col-md->
-						<col-md- class="icon-bar"></col-md->
-						<col-md- class="icon-bar"></col-md->
+					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
+						<span class="icon-bar"></span>
 					</button>
 					<a class="navbar-brand" href="#">Joan Pastor</a>
 				</div>
-				<div class="collapse navbar-collapse">
+				<div class="collapse navbar-collapse navbar-ex1-collapse">
 						<ul class="nav navbar-nav">
 							<li id="nav-home" class="active">
 								<a href="#home">Home</a>
@@ -84,7 +83,7 @@
 									<p>
 										<h2><a href="http://www.trabhci.eu/">TrabHCI at Rome, 2013</a></h2>
 									</p>
-									<p>
+									<p class="hidden-sm">
 										Technologies to Reduce the Access Barrier in Human Computer Interaction Erasmus Intensive Programme which I have been collaborating as a teacher on handwritting recognition topic.
 									</p>
 								
@@ -92,11 +91,11 @@
 							</div>
 							<div class="item">
 								<img src="img/fotos/roma2.jpg" alt="" />
-								<div class="carousel-caption">
+								<div class="carousel-caption ">
 									<p>
 										<h2><a href="http://www.trabhci.eu/">TrabHCI at Rome, 2013</a></h2>
 									</p>
-									<p>
+									<p class="hidden-sm">
 										Technologies to Reduce the Access Barrier in Human Computer Interaction Erasmus Intensive Programme which I have been collaborating as a teacher on handwritting recognition topic.
 									</p>
 								</div>
@@ -108,7 +107,7 @@
 									<p>
 										<h2><a href="http://www.swerc.eu/">SWERC at Valencia, 2013</a></h2>
 									</p>
-									<p>
+									<p class="hidden-sm">
 										Southwestern Europe Regional Contest, is a Programming Contest where I am participating as a Judge and problem setters during the 2012 and 2013 held at Valencia.
 									</p>
 								</div>
@@ -121,7 +120,7 @@
 										<h2><a href="http://www.swerc.eu/">SWERC at Valencia, 2013</a></h2>
 									</p>
 
-									<p>
+									<p class="hidden-sm">
 										Southwestern Europe Regional Contest, is a Programming Contest where I am participating as a Judge and problem setters during the 2012 and 2013 held at Valencia.
 									</p>
 								</div>
@@ -129,8 +128,8 @@
 						</div><!-- /.carousel-inner -->
 						<!--  Next and Previous controls below
 						href values must reference the id for this carousel -->
-						<a class="left carousel-control" href="#this-carousel-id" data-slide="prev"><col-md- class="icon-prev"></col-md-></a>
-						<a class="right carousel-control" href="#this-carousel-id" data-slide="next"><col-md- class="icon-next"></col-md-></a>
+						<a class="left carousel-control" href="#this-carousel-id" data-slide="prev"><span class="icon-prev"></span></a>
+						<a class="right carousel-control" href="#this-carousel-id" data-slide="next"><span class="icon-next"></span></a>
 					
 						</div>
 					</div>
@@ -156,7 +155,7 @@
 								<div class="media">
 									<a class="pull-left" href="files/joan-pastor-cv.pdf"> <img class="media-object" src="img/pdf.jpg" width="64"/> </a>
 									<div class="media-body">
-										<h4 class="media-heading">col-md-ish Version</h4>
+										<h4 class="media-heading">Spanish Version</h4>
 										Last Update: June, 2013.
 
 									</div>
@@ -490,11 +489,12 @@
 				$(document).ready(function() {
 					$('.carousel').carousel();
 
-					$('.navbar').scrollspy();
-					//$("#nav-home").toggleClass("active", true);
+					//$('.navbar').scrollspy({data-offset:'10'});
+					//$('.navbar').scrollspy('refresh')
+					$("#nav-home").toggleClass("active", true);
 
-					//$('a').smoothScroll();
-					$('.navbar a').smoothScroll({exclude: ['#home']});
+					$('a').smoothScroll({exclude: ['#home','#this-carousel-id'], offset: -100});
+					//$('.navbar a').smoothScroll();
 				})
 
 			</script>
