--- a/joan.html
+++ b/joan.html
@@ -78,12 +78,12 @@
 							<div class="item active">
 								<!-- class of active since it's the first item -->
 								<img src="img/fotos/roma1.jpg" alt="" />
-								<div class="carousel-caption">
+								<div class="carousel-caption visible-lg">
 									
 									<p>
-										<h2><a href="http://www.trabhci.eu/">TrabHCI at Rome, 2013</a></h2>
+										<h2><a href="http://www.trabhci.eu/" target="_blank">TrabHCI at Rome, 2013</a></h2>
 									</p>
-									<p class="hidden-sm">
+									<p>
 										Technologies to Reduce the Access Barrier in Human Computer Interaction Erasmus Intensive Programme which I have been collaborating as a teacher on handwritting recognition topic.
 									</p>
 								
@@ -91,11 +91,11 @@
 							</div>
 							<div class="item">
 								<img src="img/fotos/roma2.jpg" alt="" />
-								<div class="carousel-caption ">
+								<div class="carousel-caption visible-lg">
 									<p>
-										<h2><a href="http://www.trabhci.eu/">TrabHCI at Rome, 2013</a></h2>
+										<h2><a href="http://www.trabhci.eu/" target="_blank">TrabHCI at Rome, 2013</a></h2>
 									</p>
-									<p class="hidden-sm">
+									<p>
 										Technologies to Reduce the Access Barrier in Human Computer Interaction Erasmus Intensive Programme which I have been collaborating as a teacher on handwritting recognition topic.
 									</p>
 								</div>
@@ -103,11 +103,12 @@
 
 							<div class="item">
 								<img src="img/fotos/swerc1.jpg" alt="" />
-								<div class="carousel-caption">
+								<div class="carousel-caption visible-lg">
+
 									<p>
-										<h2><a href="http://www.swerc.eu/">SWERC at Valencia, 2013</a></h2>
+										<h2><a href="http://www.swerc.eu/" target="_blank">SWERC at Valencia, 2013</a></h2>
 									</p>
-									<p class="hidden-sm">
+									<p>
 										Southwestern Europe Regional Contest, is a Programming Contest where I am participating as a Judge and problem setters during the 2012 and 2013 held at Valencia.
 									</p>
 								</div>
@@ -115,12 +116,12 @@
 
 							<div class="item">
 								<img src="img/fotos/swerc2.jpg" alt="" />
-								<div class="carousel-caption">
+								<div class="carousel-caption visible-lg">
 									<p>
-										<h2><a href="http://www.swerc.eu/">SWERC at Valencia, 2013</a></h2>
+										<h2><a href="http://www.swerc.eu/" target="_blank">SWERC at Valencia, 2013</a></h2>
 									</p>
 
-									<p class="hidden-sm">
+									<p class="visible-lg">
 										Southwestern Europe Regional Contest, is a Programming Contest where I am participating as a Judge and problem setters during the 2012 and 2013 held at Valencia.
 									</p>
 								</div>
