Corrected any spelling errors

--- a/joan.html
+++ b/joan.html
@@ -233,19 +233,25 @@
 					</div>
 					<div class="row">
 						<div class="col-md-3">
-							<a href="https://github.com/pakozm/april-ann"> <h4>April-ANN</h4> <img src="img/april.png" class="img-rounded img-responsive" width="128px"> </a>
+							<p>
+							<a href="https://github.com/pakozm/april-ann"> <h4>April-ANN</h4> <img src="img/april.png" class="img-rounded img-responsive" width="128px"></a>
+							</p>
 							<p>
 								April-ann toolkit (A Pattern Recognizer In Lua with Artificial Neural Networks). Is a toolkit that incorporates ANN algorithms (as dropout, stacked denoising auto-encoders, convolutional neural networks), with other pattern recognition methods as hiddem makov models (HMMs). I have been using and contributing this amazing tool during my research.
 							</p>
 						</div>
 						<div class="col-md-3 col-md-offset-1">
+							<p>
 							<a href="https://github.com/joapaspe"> <h4>My Projects at Github</h4> <img src="img/jo-github.jpg" class="img-circle img-responsive" width="128px"> </a>
+						</p>
 							<p>
 								Some personal projects and other stuff at Github.
 							</p>
 						</div>
 						<div class="col-md-3 col-md-offset-1">
+							<p>
 							<a href="https://bitbucket.org/joapaspe"> <h4>More projects at Bitbucket</h4> <img src="img/jo-bitbucket.jpg" class="img-rounded img-responsive" width="128px"> </a>
+						</p>
 							<p>
 								I've been using Bitbuckets for another projects, mostly privates.
 							</p>
@@ -260,8 +266,8 @@
 						
 					</div>
 					<p>
-						I enjoy solve algorithmic problems and participate in different programming contests.
-						Here it is some contest and pages that I use.
+						I enjoy solving algorithmic problems and participating in different programming contests.
+						Here it is some contests and pages that I use for training.
 
 					</p>
 
@@ -338,7 +344,7 @@
 
 								<div class="hero-unit">
 									<p>
-										I like to learn and discover things. I took some courses (MOOCs) from the platforms <a href="http://www.coursera.org">Coursera</a>
+										I like to learn and discover new topics. I took some courses (MOOCs) from the platforms <a href="http://www.coursera.org">Coursera</a>
 										and <a href="http://www.udacity.com">Udacity</a>.
 									</p>
 									<p>
