--- a/joan.html
+++ b/joan.html
@@ -400,7 +400,17 @@
 
 					</div>
 					<hr>
+					<h2> Sports: </h2>
+					<div class="row">
+						<div class="col-md-4">
+							<img class="img-responsive" src="img/fotos/runners.jpg"/>
+						</div>
+						<div class="col-md-8">
+						<iframe src="http://www.endomondo.com/embed/user/summary?id=3586014&sport=0&measure=0&zone=Gp0100_CPH&width=680&height=217" width="680" height="217" frameborder="0" scrolling="no" ></iframe>
+						</div>
+					</div>			
 					</div>
+							
 			</section>
 			<section id="contact">
 				<div class="container">
