--- a/joan.html
+++ b/joan.html
@@ -522,6 +522,15 @@
 						<h3 class="modal-title">Changelog</h3>
 					</div>
 					<div class="modal-body">
+						<h3> 13/12/2013 </h3>
+						<ul>
+							<li>
+							  New layout page released. The contact information is on the beginning of the web.
+							</li>
+							<li>
+								Sports section added.
+							</li>
+						</ul>
 						<h3> 26/09/2013 </h3>
 						<ul>
 							<li>
