basic web structure

--- a/joan.html
+++ b/joan.html
@@ -39,9 +39,6 @@
 	</head>
 
 	<body data-spy="scroll" data-offset="125" data-target=".navbar">
-
-		
-
 			<div class="navbar navbar-default navbar-fixed-top" role="navigation">
 				<div class="navbar-header">
 					<button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-ex1-collapse">
@@ -96,6 +93,8 @@
 						</ol>
 						<!-- class of slide for animation -->
 						<div class="carousel-inner">
+                          
+                          <div class="item", ng-repeat
 							<div class="item active">
 								<!-- class of active since it's the first item -->
 								<img src="img/fotos/roma1.jpg" alt="" />
