--- a/app/index.html
+++ b/app/index.html
@@ -59,6 +59,7 @@
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/home.js"></script>
+        <script src="scripts/controllers/publications.js"></script>
         <!-- endbuild -->
 </body>
 </html>
