--- a/app/index.html
+++ b/app/index.html
@@ -20,7 +20,7 @@
     <link rel="stylesheet" href="styles/font-awesome.min.css">
     <!-- endbuild -->
   </head>
-  <body ng-app="joanPastorWebApp">
+  <body ng-app="joanPastorWebApp"  >
     <!--[if lt IE 7]>
       <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
     <![endif]-->
@@ -60,6 +60,7 @@
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/home.js"></script>
         <script src="scripts/controllers/publications.js"></script>
+        <script src="scripts/controllers/personal.js"></script>
         <!-- endbuild -->
 </body>
 </html>
